--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Vizualizace dat</title>
 	<link rel="stylesheet" href="style.css">
+	
+	<!-- Load c3.css -->
+	<link href="vendor/c3/c3.min.css" rel="stylesheet">
 </head>
 <body>
 	<h1>Vizualizace dat + práce s datovým API</h1>
@@ -21,5 +24,9 @@
 	</p>
 
 	<script src="covid19-zakladni-info.js"></script>
+
+	<!-- Load d3.js and c3.js -->
+	<script src="https://d3js.org/d3.v5.min.js"></script>
+	<script src="vendor/c3/c3.min.js"></script>
 </body>
 </html>
