[FEATURE] line graph of total hospitalized

--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
 		Očkovaných osob k <span id="js-ockovani-datum">–</span>: <strong id="js-ockovani">–</strong>
 	</p>
 
+	<div id="js-pocet-hosptalizovanych"></div>
+
 	<script src="covid19-zakladni-info.js"></script>
 
 	<!-- Load d3.js and c3.js -->
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<script src="vendor/c3/c3.min.js"></script>
+	
+	<script src="covid19-pocty-hospitalizovanych.js"></script>
 </body>
 </html>
