[ENHANCEMENT] linechart changed to timeseries

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		Očkovaných osob k <span id="js-ockovani-datum">–</span>: <strong id="js-ockovani">–</strong>
 	</p>
 
+	<h2>Počet hospitalizovaných</h2>
+
 	<div id="js-pocet-hosptalizovanych"></div>
 
 	<script src="covid19-zakladni-info.js"></script>
